# gradient-bang

./: API.md  CLAUDE.md  README.md  env.bot.example  pyproject.toml  shell.nix
.claude/: settings.json
.claude/skills/deploy-bot/: SKILL.md
.claude/skills/deploy-functions/: SKILL.md
.github/workflows/: ci.yml  deploy.yml  test.yml
client/: README.md  package.json  pnpm-lock.yaml
client/.husky/: pre-commit
client/app/: env.example  index.html  package.json  vite.config.ts
client/app/.ladle/: LevaControls.tsx  components.tsx  useQuestControls.tsx
client/app/.ladle/onboarding/: useOnboardingControls.tsx
client/app/src/: GameContext.tsx  main.tsx  settings.json  sw-update.ts
client/app/src/assets/: index.ts
client/app/src/capture/: SocialReplayDialog.tsx  useVoiceCapture.ts
client/app/src/components/: CharacterSelect.tsx  CopyTaskContextButton.tsx  HighlightOverlay.tsx  MapLegends.tsx  QuestCompleteNotification.tsx  SectorMap.tsx  SettingsPanel.tsx  Starfield.tsx  SuspenseLoader.tsx  TaskOutputStream.tsx  TopBar.tsx  TopBarCreditBalance.tsx  TopBarDisconnectButton.tsx  TutorialOverlay.tsx  TutorialRevealOverlay.tsx  UIModeToggle.tsx
client/app/src/css/: index.css  utilities.css
client/app/src/hooks/: useAssetPreloader.ts  useChat.ts  usePipecatConversation.ts
client/app/src/mocks/: combat.mock.ts  map.mock.ts  player.mock.ts  quest.mock.ts  sector.mock.ts
client/app/src/stores/: audio.ts  captureStore.ts  conversation.ts  game.ts  questSlice.ts  (+2 more)
client/starfield/: package.json
deployment/: Dockerfile.bot
deployment/supabase/functions/: deno.json
deployment/supabase/migrations/: 20260226100000_quest_assign_catchup.sql  20260227183211_fix_self_event_filtering.sql  20260304010000_events_ship_id_index_and_optimize_record_event.sql  20260306000000_quest_step_rewards.sql  20260326000000_add_parhelion_seeker.sql  20260327000000_ship_descriptions.sql  20260327010000_ship_balance_adjustments.sql  20260330000000_corporation_soft_delete.sql  20260401000000_context_snapshots.sql  20260408000000_quest_evaluate_resync.sql  20260414000000_record_event_exclude_corp_ship_pseudo_chars.sql
docs/: ship-descriptions.md
quest-data/: tutorial-1.json  tutorial-2.json
scripts/: reset-world.sh
src/gradientbang/pipecat_server/: bot.py  client_message_handler.py  context_upload.py  frames.py  idle_report.py  user_mute.py  voice_task_manager.py
src/gradientbang/scripts/: load_quests_to_supabase.py
src/gradientbang/tools/: __init__.py  schemas.py
src/gradientbang/utils/: api_client.py  config.py  llm_factory.py  openai_responses_llm.py  prompt_loader.py  summary_formatters.py  supabase_client.py  task_agent.py  tools_schema.py  weave_tracing.py
tests/: test_context_summarization.py
tests/integration/: e2e_harness.py  test_task_e2e.py
tests/unit/: test_event_relay.py  test_idle_report.py  test_summary_formatters.py  test_task_agent.py  test_task_agent_integration.py  test_voice_agent.py  test_voice_relay_integration.py
(+117 files in other folders)
