[project]
name = "gradient-bang"
version = "0.1.0"
description = "Game of the Millennium"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.1.1",
    "google-genai>=0.7.0",
    "rich>=13.0.0",
    "loguru>=0.7.0",
    "psycopg[binary]>=3.2.1",
    "supabase>=2.24.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.1.0", "pytest-timeout>=2.3.1"]

worldgen = ["numpy>=1.26.0", "scipy>=1.11.0", "networkx>=3.0"]

bot = [
    "pipecat-ai[deepgram,daily,cartesia,webrtc,silero,google,anthropic,runner]==0.0.105",
    "pipecat-ai-cli",
    "boto3>=1.35.0",
    "soundfile>=0.12.0",
]

tracing = ["weave>=0.50"]

[project.scripts]
# CLI
gb = "gradientbang.cli:app"

# Agent
bot = "gradientbang.pipecat_server.__main__:main"

# NPCs
npc-run = "gradientbang.npc.run_npc:main"

# Useful scripts
universe-bang = "gradientbang.scripts.universe_bang:main"
character-lookup = "gradientbang.scripts.character_lookup:main"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


[tool.uv]
# Override specific sub-dependencies to fix compatibility issues
# Note: run all scripts/tests via `uv run …` to keep environments consistent.
override-dependencies = [
    "numba==0.61.2",  # Pin to version that supports Python 3.12
    "openai==1.99.5",
]
package = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
# Exclude archived integration tests from default test runs
norecursedirs = ["integration-old", ".git", "__pycache__", "*.egg-info"]
markers = [
    "unit: Unit tests (fast, no server needed)",
    "integration: Integration tests (may need server)",
    "requires_server: Requires live server on port 8002",
    "stress: Stress tests (slow, concurrent operations) - skip by default",
    "requires_supabase_functions(*names): Skip when named Supabase edge functions are not implemented",
    "live_api: Tests that call prod external APIs (Gemini, etc.) - requires API keys",
    "llm: Tests for LLM behavior (context summarization, prompts)",
]
# Suppress deprecation warnings from third-party libraries
filterwarnings = [
    "ignore:The 'timeout' parameter is deprecated:DeprecationWarning:supabase",
    "ignore:The 'verify' parameter is deprecated:DeprecationWarning:supabase",
]
# Timeout configuration (prevent hanging tests)
timeout = 60 # Max 30 seconds per test
# Event waiting timeouts (use asyncio.timeout() in tests):
#   - Integration tests: 10 seconds (real server, events)
#   - Unit tests: 5 seconds (fast, mocked operations)
#   - Combat tests: 20 seconds (combat rounds can take 15s)

[tool.ruff]
exclude = [".git", "*_pb2.py"]
line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"src/gradientbang/pipecat_server/bot.py" = ["E402"]
